add github message formating